--- a/static/css/flaskmon.css
+++ b/static/css/flaskmon.css
@@ -2,11 +2,10 @@
     border-bottom: 1px solid #FFF;
     list-style-type: none;
     height: 60px;
-    margin: 10;
-    padding: 10;
+    margin: 0;
+    padding: 0;
     position: relative;
     width: 40px;
-    display: inline-block;
     }
     
 .verticalBarGraph a {
@@ -31,6 +30,26 @@ h1 {
     text-align : center;
 }
 
+h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-align : center;
+}
+
+h3 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-align : center;
+    font-size  : 16px;
+}
+
+h4 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    text-align : center;
+    font-size  : 14px;
+}
+
 .metrics {
     list-style: none;
 }
@@ -44,8 +63,12 @@ h1 {
 .verticalBarGraph a.p2 { background-color:#888888 }    
 .verticalBarGraph a.p2 { background-color:#888888 }    
 .verticalBarGraph a:hover { background-color:#AAAAAA }
-/*
-.metric {
 
-}*/
+.metricBlock {
+    display: inline-block;
+    background-color: #BBBBBB;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+}
 
